---
source: tests/test_serde.rs
expression: "&release(\"@foo.bar.baz--blah@1.2.3-dev+BUILD-code\")"

---
{
  "package": "@foo.bar.baz--blah",
  "version_raw": "1.2.3-dev+BUILD-code",
  "version_parsed": {
    "major": 1,
    "minor": 2,
    "patch": 3,
    "revision": 0,
    "pre": "dev",
    "build_code": "BUILD-code",
    "raw_short": "1.2.3-dev",
    "components": 3,
    "raw_quad": [
      "1",
      "2",
      "3",
      null
    ]
  },
  "build_hash": null,
  "description": "1.2.3-dev (BUILD-code)"
}
